findbug bugs
git-svn-id: https://svn.code.sf.net/p/openuss/code/branches/openuss-bachelor-ws0708@4434 60046477-0c10-0410-bf4b-e552a4ff1768